src/qt/libqmetaobject.bf

public struct QMetaMethod
{
	[LinkName("QMetaMethod_new")]
	public static extern QMetaMethod* QMetaMethod_new(QMetaMethod* other);
	[LinkName("QMetaMethod_new2")]
	public static extern QMetaMethod* QMetaMethod_new2(QMetaMethod* other);
	[LinkName("QMetaMethod_new3")]
	public static extern QMetaMethod* QMetaMethod_new3();
	[LinkName("QMetaMethod_new4")]
	public static extern QMetaMethod* QMetaMethod_new4(QMetaMethod* param1);
	[LinkName("QMetaMethod_MethodSignature")]
	public static extern libqt_string QMetaMethod_MethodSignature(Self* c_this);
	[LinkName("QMetaMethod_Name")]
	public static extern libqt_string QMetaMethod_Name(Self* c_this);
	[LinkName("QMetaMethod_TypeName")]
	public static extern char8[] QMetaMethod_TypeName(Self* c_this);
	[LinkName("QMetaMethod_ReturnType")]
	public static extern int32 QMetaMethod_ReturnType(Self* c_this);
	[LinkName("QMetaMethod_ReturnMetaType")]
	public static extern QMetaType QMetaMethod_ReturnMetaType(Self* c_this);
	[LinkName("QMetaMethod_ParameterCount")]
	public static extern int32 QMetaMethod_ParameterCount(Self* c_this);
	[LinkName("QMetaMethod_ParameterType")]
	public static extern int32 QMetaMethod_ParameterType(Self* c_this, int32 index);
	[LinkName("QMetaMethod_ParameterMetaType")]
	public static extern QMetaType QMetaMethod_ParameterMetaType(Self* c_this, int32 index);
	[LinkName("QMetaMethod_GetParameterTypes")]
	public static extern void QMetaMethod_GetParameterTypes(Self* c_this, int32* types);
	[LinkName("QMetaMethod_ParameterTypes")]
	public static extern libqt_string[] QMetaMethod_ParameterTypes(Self* c_this);
	[LinkName("QMetaMethod_ParameterTypeName")]
	public static extern libqt_string QMetaMethod_ParameterTypeName(Self* c_this, int32 index);
	[LinkName("QMetaMethod_ParameterNames")]
	public static extern libqt_string[] QMetaMethod_ParameterNames(Self* c_this);
	[LinkName("QMetaMethod_Tag")]
	public static extern char8[] QMetaMethod_Tag(Self* c_this);
	[LinkName("QMetaMethod_Access")]
	public static extern int64 QMetaMethod_Access(Self* c_this);
	[LinkName("QMetaMethod_MethodType")]
	public static extern int64 QMetaMethod_MethodType(Self* c_this);
	[LinkName("QMetaMethod_Attributes")]
	public static extern int32 QMetaMethod_Attributes(Self* c_this);
	[LinkName("QMetaMethod_MethodIndex")]
	public static extern int32 QMetaMethod_MethodIndex(Self* c_this);
	[LinkName("QMetaMethod_RelativeMethodIndex")]
	public static extern int32 QMetaMethod_RelativeMethodIndex(Self* c_this);
	[LinkName("QMetaMethod_Revision")]
	public static extern int32 QMetaMethod_Revision(Self* c_this);
	[LinkName("QMetaMethod_IsConst")]
	public static extern bool QMetaMethod_IsConst(Self* c_this);
	[LinkName("QMetaMethod_EnclosingMetaObject")]
	public static extern QMetaObject* QMetaMethod_EnclosingMetaObject(Self* c_this);
	[LinkName("QMetaMethod_Invoke")]
	public static extern bool QMetaMethod_Invoke(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue);
	[LinkName("QMetaMethod_Invoke2")]
	public static extern bool QMetaMethod_Invoke2(Self* c_this, QObject* object, QGenericReturnArgument returnValue);
	[LinkName("QMetaMethod_Invoke3")]
	public static extern bool QMetaMethod_Invoke3(Self* c_this, QObject* object, int64 connectionType);
	[LinkName("QMetaMethod_InvokeWithObject")]
	public static extern bool QMetaMethod_InvokeWithObject(Self* c_this, QObject* object);
	[LinkName("QMetaMethod_InvokeOnGadget")]
	public static extern bool QMetaMethod_InvokeOnGadget(Self* c_this, void* gadget, QGenericReturnArgument returnValue);
	[LinkName("QMetaMethod_InvokeOnGadgetWithGadget")]
	public static extern bool QMetaMethod_InvokeOnGadgetWithGadget(Self* c_this, void* gadget);
	[LinkName("QMetaMethod_IsValid")]
	public static extern bool QMetaMethod_IsValid(Self* c_this);
	[LinkName("QMetaMethod_Invoke4")]
	public static extern bool QMetaMethod_Invoke4(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0);
	[LinkName("QMetaMethod_Invoke5")]
	public static extern bool QMetaMethod_Invoke5(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1);
	[LinkName("QMetaMethod_Invoke6")]
	public static extern bool QMetaMethod_Invoke6(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2);
	[LinkName("QMetaMethod_Invoke7")]
	public static extern bool QMetaMethod_Invoke7(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3);
	[LinkName("QMetaMethod_Invoke8")]
	public static extern bool QMetaMethod_Invoke8(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4);
	[LinkName("QMetaMethod_Invoke9")]
	public static extern bool QMetaMethod_Invoke9(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5);
	[LinkName("QMetaMethod_Invoke10")]
	public static extern bool QMetaMethod_Invoke10(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6);
	[LinkName("QMetaMethod_Invoke11")]
	public static extern bool QMetaMethod_Invoke11(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7);
	[LinkName("QMetaMethod_Invoke12")]
	public static extern bool QMetaMethod_Invoke12(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8);
	[LinkName("QMetaMethod_Invoke13")]
	public static extern bool QMetaMethod_Invoke13(Self* c_this, QObject* object, int64 connectionType, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8, QGenericArgument val9);
	[LinkName("QMetaMethod_Invoke32")]
	public static extern bool QMetaMethod_Invoke32(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0);
	[LinkName("QMetaMethod_Invoke42")]
	public static extern bool QMetaMethod_Invoke42(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1);
	[LinkName("QMetaMethod_Invoke52")]
	public static extern bool QMetaMethod_Invoke52(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2);
	[LinkName("QMetaMethod_Invoke62")]
	public static extern bool QMetaMethod_Invoke62(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3);
	[LinkName("QMetaMethod_Invoke72")]
	public static extern bool QMetaMethod_Invoke72(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4);
	[LinkName("QMetaMethod_Invoke82")]
	public static extern bool QMetaMethod_Invoke82(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5);
	[LinkName("QMetaMethod_Invoke92")]
	public static extern bool QMetaMethod_Invoke92(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6);
	[LinkName("QMetaMethod_Invoke102")]
	public static extern bool QMetaMethod_Invoke102(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7);
	[LinkName("QMetaMethod_Invoke112")]
	public static extern bool QMetaMethod_Invoke112(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8);
	[LinkName("QMetaMethod_Invoke122")]
	public static extern bool QMetaMethod_Invoke122(Self* c_this, QObject* object, QGenericReturnArgument returnValue, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8, QGenericArgument val9);
	[LinkName("QMetaMethod_Invoke33")]
	public static extern bool QMetaMethod_Invoke33(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0);
	[LinkName("QMetaMethod_Invoke43")]
	public static extern bool QMetaMethod_Invoke43(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1);
	[LinkName("QMetaMethod_Invoke53")]
	public static extern bool QMetaMethod_Invoke53(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2);
	[LinkName("QMetaMethod_Invoke63")]
	public static extern bool QMetaMethod_Invoke63(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3);
	[LinkName("QMetaMethod_Invoke73")]
	public static extern bool QMetaMethod_Invoke73(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4);
	[LinkName("QMetaMethod_Invoke83")]
	public static extern bool QMetaMethod_Invoke83(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5);
	[LinkName("QMetaMethod_Invoke93")]
	public static extern bool QMetaMethod_Invoke93(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6);
	[LinkName("QMetaMethod_Invoke103")]
	public static extern bool QMetaMethod_Invoke103(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7);
	[LinkName("QMetaMethod_Invoke113")]
	public static extern bool QMetaMethod_Invoke113(Self* c_this, QObject* object, int64 connectionType, QGenericArgument val0, QGenericArgument val1, QGenericArgument val2, QGenericArgument val3, QGenericArgument val4, QGenericArgument val5, QGenericArgument val6, QGenericArgument val7, QGenericArgument val8);
